crates/plotnik-lib/tests/02-parser/recovery_validation/ref_with_category_hash.txt
Q = (RefName#subtype)
------------------ DIAGNOSTICS -------------------
error: references cannot have supertypes
 --> query.ptk:1:13
  |
1 | Q = (RefName#subtype)
  |             ^
  |
help: supertypes refine node kinds, not references: write `(supertype#subtype)` or just `(RefName)`
